--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,13 +6,12 @@
 }
 html {
   background-color: #777;
-  font-size: 16px;
 }
 .family {
   display: flex;
   justify-content: center;
   margin: 8px 0 8px 0;
-  font-size: 1.7em;
+  font-size: 24px;
 }
 
 .child, .grandchild {
@@ -55,9 +54,19 @@ html {
 }
 p {
   position: absolute;
-  margin-top: .7em;
+  margin-top: 10px;
   left: 50%;
   transform: translate(-50%);
+}
+.msgButton, .button {
+  transform: translate(-50%);
+  display: inline-block;
+  font-size: 18px;
+  cursor: pointer;
+  position: absolute;
+  margin-top: .7em;
+  left: 50%;
+  top: 25px;
 }
 
 .Mathews, .Moore {
